--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 zeebe.client.job.timeout=600000
 zeebe.client.requestTimeout=60s
+
+# Zeebe
+zeebe.client.broker.gateway-address=zeebe:26500
+zeebe.client.security.certificatePath=classpath:/secrets/zeebe.crt
+
+# Metrics
+management.endpoints.web.exposure.include=health,metrics,prometheus
